# tentrillion-game-engine

./: .gitignore  .gitmodules  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  tentrillion_export.h
.github/workflows/: cmake-multi-platform.yml
include/editor/managers/: baseGuiManager.hpp
include/lib/: tentrillion-game-engine.hpp  tentrillion.hpp  tentrillionService.hpp
include/lib/math/: vectorMath.hpp
include/lib/services/: renderingService.hpp  textureService.hpp  vulkanBackendManagerService.hpp
include/lib/services/backends/: openGlBackendManagerService.hpp  renderingBackend.hpp  softwareBackendManager.hpp  vulkanBackendManagerService.hpp
src/editor/: CMakeLists.txt  editor.cpp  main.cpp
src/editor/managers/: baseGuiManager.cpp
src/lib/: CMakeLists.txt  main.cpp  tentrillion-game-engine.cpp  tentrillion.cpp  tentrillionService.cpp
src/lib/math/: vectorMath.cpp
src/lib/services/: renderingService.cpp  textureService.cpp  vulkanBackendManagerService.cpp
src/lib/services/backends/: openGlBackendManagerService.cpp  renderingBackend.cpp  softwareBackendManager.cpp  vulkanBackendManagerService.cpp
src/test/: main.cpp
